MMA-6510 Rydd opp i ymse smågreier